# apps/web/lib/openapi.json
@@ -92,7 +92,8 @@
 					"comment": { "type": "string", "nullable": true },
 					"createdByClient": { "type": "string", "nullable": true },
 					"trackerHost": { "type": "string", "nullable": true },
-					"trackersCount": { "type": "number" }
+					"trackersCount": { "type": "number" },
+					"errorMessage": { "type": "string", "nullable": true }
 				},
 				"required": [
 					"id",
@@ -131,7 +132,8 @@
 					"comment",
 					"createdByClient",
 					"trackerHost",
-					"trackersCount"
+					"trackersCount",
+					"errorMessage"
 				]
 			}
 		},
@@ -602,7 +604,8 @@
 													"comment": { "type": "string", "nullable": true },
 													"createdByClient": { "type": "string", "nullable": true },
 													"trackerHost": { "type": "string", "nullable": true },
-													"trackersCount": { "type": "number" }
+													"trackersCount": { "type": "number" },
+													"errorMessage": { "type": "string", "nullable": true }
 												},
 												"required": [
 													"id",
@@ -641,7 +644,8 @@
 													"comment",
 													"createdByClient",
 													"trackerHost",
-													"trackersCount"
+													"trackersCount",
+													"errorMessage"
 												]
 											}
 										},
@@ -724,7 +728,8 @@
 												"comment": { "type": "string", "nullable": true },
 												"createdByClient": { "type": "string", "nullable": true },
 												"trackerHost": { "type": "string", "nullable": true },
-												"trackersCount": { "type": "number" }
+												"trackersCount": { "type": "number" },
+												"errorMessage": { "type": "string", "nullable": true }
 											},
 											"required": [
 												"id",
@@ -763,7 +768,8 @@
 												"comment",
 												"createdByClient",
 												"trackerHost",
-												"trackersCount"
+												"trackersCount",
+												"errorMessage"
 											]
 										},
 										"statusCode": { "type": "number" },
@@ -845,7 +851,8 @@
 												"comment": { "type": "string", "nullable": true },
 												"createdByClient": { "type": "string", "nullable": true },
 												"trackerHost": { "type": "string", "nullable": true },
-												"trackersCount": { "type": "number" }
+												"trackersCount": { "type": "number" },
+												"errorMessage": { "type": "string", "nullable": true }
 											},
 											"required": [
 												"id",
@@ -884,7 +891,8 @@
 												"comment",
 												"createdByClient",
 												"trackerHost",
-												"trackersCount"
+												"trackersCount",
+												"errorMessage"
 											]
 										},
 										"statusCode": { "type": "number" },
@@ -1072,7 +1080,8 @@
 												"comment": { "type": "string", "nullable": true },
 												"createdByClient": { "type": "string", "nullable": true },
 												"trackerHost": { "type": "string", "nullable": true },
-												"trackersCount": { "type": "number" }
+												"trackersCount": { "type": "number" },
+												"errorMessage": { "type": "string", "nullable": true }
 											},
 											"required": [
 												"id",
@@ -1111,7 +1120,8 @@
 												"comment",
 												"createdByClient",
 												"trackerHost",
-												"trackersCount"
+												"trackersCount",
+												"errorMessage"
 											]
 										},
 										"statusCode": { "type": "number" },
